# storage

./: .gitignore  CMakeLists.txt  README.md  cloud.drawio
.github/workflows/: cmake.yml
apps/: CMakeLists.txt
apps/client/: CMakeLists.txt
apps/client_app/: CMakeLists.txt  client_main.cpp
apps/client_app/storage_client/: CMakeLists.txt  storage_client.cpp  storage_client.hpp
apps/client_app/storage_client/network/: http_session.hpp  network_module.cpp  network_module.hpp  websocket_session.cpp  websocket_session.hpp
apps/cloud_client_app/: CMakeLists.txt  cloud_client_app_console_main.cpp
apps/cloud_client_app/client/: CMakeLists.txt  client.cpp  client.h
apps/cloud_client_app/client/internal/: CMakeLists.txt  abstract_client.h  client_fabric.cpp  client_fabric.h
apps/cloud_client_app/client/internal/oatpp_client/: CMakeLists.txt  api_client.hpp  api_holder.hpp  api_model.hpp  async_executor.cpp  async_executor.hpp  async_handler.cpp  async_handler.hpp  oatpp_client.cpp  oatpp_client.h  websocket_listener.cpp  websocket_listener.hpp
apps/cloud_server_app/: CMakeLists.txt  cloud_server_app_console_main.cpp  cloud_server_app_main.cpp  cloud_server_console_app_main.cpp  cmake_config.h.cmake
apps/cloud_server_app/configs/: cmake_config.h.cmake  log_config.conf  server_config.json
apps/cloud_server_app/server/: CMakeLists.txt  component.hpp  network_components.hpp  server.cpp  server.h  server.hpp
apps/cloud_server_app/server/config_handling/: config_handling.cpp  config_handling.hpp
apps/cloud_server_app/server/internal/: abstract_server.h  server_fabric.cpp  server_fabric.h
apps/cloud_server_app/server/internal/oatpp_server/: CMakeLists.txt  api_controller.hpp  api_model.hpp  component.hpp  oatpp_server.cpp  server_api_controller.hpp  websocket_listener.cpp  websocket_listener.hpp
apps/cloud_server_app/server/internal/oatpp_server/websocket/: WSListener.cpp  WSListener.hpp
apps/cloud_server_app/src/: AppComponent.hpp
apps/cloud_server_app/web/: index.html
apps/console_app/: CMakeLists.txt  cmake_config.h  cmake_config.h.cmake  main.cpp
apps/console_client/: CMakeLists.txt  cmake_config.h  main.cpp  (+1 more)
apps/crypto_sample/: CMakeLists.txt  main.cpp
apps/server/: CMakeLists.txt  cloud_server_app_console_main.cpp  network_components.hpp  server_console_main.cpp
apps/server/config_handling/: CMakeLists.txt
apps/server/configs/: server_config.json
apps/server/server/: CMakeLists.txt  server.cpp
apps/server/server/internal/: CMakeLists.txt  abstract_server.h  server_fabric.cpp
apps/server/server/internal/oatpp_server/: AppComponent.hpp  CMakeLists.txt  oatpp_server.cpp  oatpp_server.h  server_api_controller.hpp
apps/server/server/internal/oatpp_server/controller/: MyController.hpp
apps/server/server_console_app/: CMakeLists.txt  server_console_app_main.cpp
apps/server/server_console_app/configs/: log_config.conf
apps/server/server_console_app/dummy_server/: CMakeLists.txt  dummy_server.cpp  dummy_server.hpp
apps/server/server_console_app/dummy_server/pages_manager/: CMakeLists.txt  pages_manager.cpp  pages_manager.hpp
apps/server/server_console_app/html/: index.html
apps/server/server_console_app/storage_server/: CMakeLists.txt  storage_server.cpp  storage_server.hpp
apps/server/server_console_app/storage_server/pages_manager/: CMakeLists.txt  pages_manager.cpp  pages_manager.hpp
apps/server/server_console_app/web_pages/home/: index.html
apps/server/server_console_app/web_pages/kek/: index.html
apps/server/server_console_app/web_pages/statuses/404/: index.html
apps/server/src/: App.cpp
apps/server/src/controller/: MyController.hpp
apps/server1/server/internal/: CMakeLists.txt  server_fabric.cpp
apps/server_app/: CMakeLists.txt  server_main.cpp
apps/server_app/storage_server/: CMakeLists.txt  storage_server.cpp  storage_server.hpp
apps/server_app/storage_server/internal/: CMakeLists.txt  client_fabric.h
apps/server_app/storage_server/network/: CMakeLists.txt  http_session.cpp  http_session.hpp  listener.cpp  listener.hpp  network_module.cpp  network_module.hpp  sessions_manager.cpp  sessions_manager.hpp  websocket_session.cpp  websocket_session.hpp
docs/: general_structure.drawio  general_structure_of_server_or_client.drawio
libs/: CMakeLists.txt
libs/filesystem_module/: CMakeLists.txt
libs/filesystem_module/include/: filesystem_module.h
libs/filesystem_module/src/: filesystem_module.cpp
libs/filesystem_module/tests/: filesystem_module_tests.cpp
libs/lib_logger/: CMakeLists.txt
libs/lib_logger/include/: logger.h
libs/lib_logger/src/: logger.cpp
libs/lib_logger/tests/: logger_test.cpp
libs/lib_network/: CMakeLists.txt
libs/lib_network/include/: network.h
libs/lib_network/src/: client.cpp  network.cpp  server.cpp
libs/lib_network/tests/: network_test.cpp
modules/: CMakeLists.txt
modules/crc_module/: CMakeLists.txt
modules/crc_module/include/: crc_module.h
modules/crc_module/src/: crc_module.cpp
modules/crc_module/tests/: crc_module_tests.cpp
modules/crypto_module/: CMakeLists.txt
modules/crypto_module/include/: crypto_module.h
modules/crypto_module/src/: crypto_module.cpp
modules/crypto_module/tests/: crypto_module_tests.cpp
modules/logger_module/: CMakeLists.txt
modules/logger_module/tests/: logger_module_tests.cpp
modules/logger_module/tests/configs/: log_config.conf
modules/network_module/: CMakeLists.txt  network_module.hpp  network_module_common.cpp  network_module_common.hpp
modules/network_module/client/: client.cpp
modules/network_module/configs/: abstract_server_config.json  cmake_config.h.cmake
modules/network_module/include/: network_module.h
modules/network_module/server/: http_session.cpp  http_session.hpp  listener.cpp  listener.hpp  server.cpp  sessions_manager.cpp  sessions_manager.hpp  websocket_session.cpp  websocket_session.hpp
modules/network_module/src/: network_module.cpp
modules/network_module/tests/: network_module_tests.cpp
tools/: client.py  server.py
utility/: install-oatpp-modules.sh
utils/: client.py  server.py
(+33 files in other folders)
